# vision-ocr

./: .dockerignore  .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  compose.yaml  lefthook.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: azure_vision.py  main.py
app/config/: config.py
app/core/azure/: azure_receipt.py  azure_vision.py
app/core/database/: __init__.py
app/core/entities/receipt/: receipt.py
app/core/exceptions/: __init__.py  base.py
app/core/redis/: redis.py
app/core/schema/: __init__.py  base_response.py  error_schema.py
app/core/schema/ocr/: ocr_schema.py
app/helpers/: converter.py  encoder.py  file.py
app/initialize/: __init__.py
app/routers/health/: health.py
app/routers/ocr/: ocr.py
app/routers/receipt/: receipt.py
app/utils/: logger.py
conf/: dev.env
