[tool.poetry]
name = "poc-azure-ai-vision"
version = "0.0.1"
description = "POC Azure AI Vision FastAPI "
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.10.8"
alembic = "^1.8.1"
sqlalchemy = "^1.4.42"
gunicorn = "^21.2.0"
fastapi = "^0.95.0"
fastapi-event = "^0.1.3"
uvicorn = "^0.17.6"
passlib = "^1.7.4"
pyyaml = "^6.0.1"
loguru = "^0.4.1"
requests = "^2.28.1"
pyjwt = {extras = ["crypto"], version = "^2.6.0"}
boto3 = "^1.26.23"
types-requests = "^2.28.11.13"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.0"}
starlette = "0.26.1"
pylint = "^2.17.5"
asyncpg = "^0.28.0"
orjson = "^3.9.4"
aiomysql = "^0.2.0"
redis = "^4.3.4"
types-redis = "^4.6.0.3"
python-multipart = "^0.0.6"
numpy = "^1.26.0"
opencv-python-headless = "^4.8.1.78"
azure-ai-formrecognizer = "^3.3.0"

[tool.poetry.dev-dependencies]
black = {version = "^23.1.0", allow-prereleases = true}
isort = "^5.10.1"
flake8 = "^6.1.0"
codespell = "^2.2.5"
behave = "^1.2.6"
mypy = "^0.982"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-parallel = "^0.1.1"
debugpy = "^1.6.7.post1"
pytest-asyncio = "^0.20.2"
httpx = "^0.23.1"
py = "^1.11.0"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = 1
